--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --ignore-watch node_modules src/server.ts --transpileOnly"
+    "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
+    "date-fns": "^2.16.1",
     "eslint": "^7.14.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^8.3.1",
+    "uuidv4": "^6.2.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
