--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "date-fns": "^2.16.1",
     "eslint": "^7.14.0",
     "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "typeorm": "^0.2.29",
     "uuid": "^8.3.1",
     "uuidv4": "^6.2.5"
   },
