--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^7.14.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29",
     "uuid": "^8.3.1",
     "uuidv4": "^6.2.5"
