--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,15 +16,17 @@
   },
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
+    "camelcase": "off",
+    "prettier/prettier": "error",
+    "class-methods-use-this": "off",
+    "@typescript-eslint/camelcase": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
       {
         "ts": "never"
       }
-    ],
-    "prettier/prettier": "error",
-    "class-methods-use-this": "off"
+    ]
   },
   "settings": {
     "import/resolver": {
