criando o autenticador de rotas com o JWT e criando o USER dentro do request do Express

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
     "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
