--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^7.14.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29",
@@ -27,6 +28,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.5",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "eslint-config-airbnb-base": "^14.2.1",
